--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 />
                 <img
                   alt="image"
-                  src="public/playground_assets/oip%20%5B3%5D-1200w.jpg"
+                  src="picturebro.jpg"
                   class="home-image3"
                 />
                 <img
