--- a/index.html
+++ b/index.html
@@ -42,11 +42,6 @@
           class="navigation-header navigation-root-class-name"
         >
           <div class="navigation-max-width">
-            <img
-              alt="logo"
-              src="330e3fd6-db88-4679-90d0-8428d6989af5"
-              class="navigation-image"
-            />
             <div class="navigation-nav">
               <nav
                 class="navigation-links-nav navigation-links-root-class-name17"
@@ -130,6 +125,11 @@
           <div class="home-hero section-container">
             <div class="home-max-width max-content-container">
               <div class="home-content-container">
+                <img
+                  src="public/playground_assets/picturebro-400h.jpg"
+                  alt="image"
+                  class="home-image"
+                />
                 <h1 class="home-text">
                   On a mission to collaborate with global studios. connect with
                   our team to leverage your studios growth.
@@ -150,7 +150,7 @@
                 <img
                   src="public/playground_assets/conference-700w.jpeg"
                   alt="image"
-                  class="home-image"
+                  class="home-image01"
                 />
               </div>
             </div>
@@ -166,32 +166,32 @@
                 <img
                   alt="image"
                   src="public/playground_assets/group%207-1200w.png"
-                  class="home-image1"
+                  class="home-image02"
                 />
                 <img
                   alt="image"
                   src="public/playground_assets/unitylogo-1200w.webp"
-                  class="home-image2"
+                  class="home-image03"
                 />
                 <img
                   alt="image"
-                  src="picturebro.jpg"
-                  class="home-image3"
+                  src="public/playground_assets/oip%20%5B3%5D-1200w.jpg"
+                  class="home-image04"
                 />
                 <img
                   alt="image"
                   src="public/playground_assets/r-1200w.jpg"
-                  class="home-image4"
+                  class="home-image05"
                 />
                 <img
                   alt="image"
                   src="public/playground_assets/oip%20%5B1%5D-1200w.jpg"
-                  class="home-image5"
+                  class="home-image06"
                 />
                 <img
                   alt="image"
                   src="public/playground_assets/group%2012-1200w.png"
-                  class="home-image6"
+                  class="home-image07"
                 />
               </div>
             </div>
@@ -397,7 +397,7 @@
             <img
               alt="image"
               src="public/playground_assets/shanghai-1000h.jpg"
-              class="home-image7"
+              class="home-image08"
             />
             <div class="home-content-container1 section-container">
               <div class="home-container3">
@@ -530,7 +530,7 @@
               <img
                 alt="image"
                 src="public/playground_assets/captura%20da%20web_29-8-2022_201046_home.yodo1.com-300h.jpeg"
-                class="home-image8"
+                class="home-image09"
               />
             </div>
           </div>
@@ -544,6 +544,11 @@
             </div>
           </div>
         </main>
+        <img
+          src="public/playground_assets/picturebro-400h.jpg"
+          alt="image"
+          class="home-image10"
+        />
         <footer class="footer-footer section-container footer-root-class-name">
           <div class="footer-max-width max-content-container">
             <div class="footer-bottom-container">
